--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -83,7 +83,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        machines: [ 1, 2, 3 ]
+        machines: [ 1, 2, 3, 4, 5 ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
