--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: 18
 
       - name: Get yarn cache directory path
-        run: echo "YARN_CACHE_DIR=$(yarn config get cacheFolder)" << $GITHUB_STATE
+        run: echo "YARN_CACHE_DIR=$(yarn config get cacheFolder)" >> $GITHUB_STATE
 
       # This caches our yarn packages so that running `yarn install` is fairly fast in repeated runs.
       # We use yarn.lock as the cache key, so that the cache is invalidated when there are new dependencies.
@@ -135,6 +135,10 @@ jobs:
     name: Unit tests
     runs-on: ubuntu-latest
     needs: [ dependencies ]
+    strategy:
+      fail-fast: false
+      matrix:
+        machines: [ 1, 2 ]
     steps:
       - name: checkout
         uses: actions/checkout@v3
@@ -154,7 +158,12 @@ jobs:
           key: yarn-${{ hashFiles('**/yarn.lock') }}
 
       - name: run tests
-        run: yarn test --coverage --runInBand
+        run: "
+          npx jest --listTests --json
+            | jq '[_nwise(length / ${{ strategy.job-total }} | ceil)]'
+            | jq '.[${{ strategy.job-index }}] | .[] | @text'
+            | xargs yarn test --coverage --runInBand
+        "
 
       # TODO: Cache code coverage
 
