--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,11 +29,12 @@ jobs:
           node-version: 18
 
       - name: Get yarn cache directory path
-        run: |
+        run: "
           yarn --version\n
-          echo "Yarn cache folder:"\n
+          echo Yarn cache folder:\n
           yarn config get cacheFolder\n
-          echo "YARN_CACHE_DIR=$(yarn config get cacheFolder)" >> $GITHUB_ENV
+          echo YARN_CACHE_DIR=$(yarn config get cacheFolder) >> $GITHUB_ENV
+        "
 
       - uses: actions/cache/restore@v3
         with:
