Renaming to 'LayoutNodeFromType' and rewriting most functions to get summary/repeating group table data as react hooks. The latter removes the need for SummaryContext, so I'm removing that.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -169,6 +169,12 @@
       "rules": {
         "@typescript-eslint/no-var-requires": ["off"]
       }
+    },
+    {
+      "files": ["src/layout/*/index.tsx"],
+      "rules": {
+        "react-hooks/rules-of-hooks": "off"
+      }
     }
   ]
 }
