Installing json schema types and tools

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/dompurify": "2.4.0",
     "@types/dot-object": "2.1.2",
     "@types/jest": "29.4.0",
+    "@types/json-schema": "^7.0.11",
     "@types/marked": "4.0.8",
     "@types/mime": "3.0.1",
     "@types/react": "18.0.28",
@@ -133,6 +134,7 @@
     "dot-object": "2.1.4",
     "eslint-plugin-preferred-import-path": "^1.1.0",
     "html-react-parser": "3.0.11",
+    "json-schema-library": "^7.4.7",
     "jsonpointer": "5.0.1",
     "marked": "4.2.12",
     "moment": "2.29.4",
