Adding eslint rule for automatic shortening of object initializers

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -53,6 +53,7 @@
   ],
   "rules": {
     "curly": ["error", "all"],
+    "object-shorthand": ["error", "always"],
     "no-console": [
       "warn",
       {
