Adding eslint rule for to omit curly braces and return statement in simple functions

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,6 +54,7 @@
   "rules": {
     "curly": ["error", "all"],
     "object-shorthand": ["error", "always"],
+    "arrow-body-style": ["error", "as-needed"],
     "no-console": [
       "warn",
       {
