--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "author": "Altinn",
   "license": "3-Clause BSD",
+  "exports": "./src/index.tsx",
   "scripts": {
     "postinstall": "husky install",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.development.js --mode development --progress",
@@ -38,8 +39,11 @@
   },
   "devDependencies": {
     "@babel/core": "7.21.0",
+    "@babel/plugin-transform-runtime": "^7.21.0",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
+    "@babel/runtime": "^7.21.0",
+    "@babel/runtime-corejs3": "^7.21.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
     "@testing-library/cypress": "9.0.0",
     "@testing-library/jest-dom": "5.16.5",
@@ -61,8 +65,10 @@
     "axe-core": "4.6.3",
     "babel-jest": "29.4.3",
     "babel-loader": "9.1.2",
+    "caniuse-lite": "^1.0.30001466",
     "classnames": "2.3.2",
     "concurrently": "7.6.0",
+    "core-js": "^3.29.1",
     "cross-env": "7.0.3",
     "css-loader": "6.7.3",
     "cypress": "12.7.0",
