--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-simple-import-sort": "10.0.0",
     "eslint-plugin-sonarjs": "0.18.0",
+    "eslint-plugin-testing-library": "^5.10.2",
     "eslint-plugin-unused-imports": "^2.0.0",
     "execa": "7.1.0",
     "fork-ts-checker-notifier-webpack-plugin": "6.0.0",
