Adding code to test all existing apps, and fixing some problems I found now that I introduced repeating groups here as well.

--- a/template.env
+++ b/template.env
@@ -5,3 +5,6 @@ LOCALTEST_PATH="C:/Code/altinn-studio/src/development"
 
 ## This should be the path to the root folder of the app you want to run tests against
 APP_PATH="C:/Code/altinn-app-repos/frontend-test"
+
+## This should point to a folder containing all known apps
+ALTINN_ALL_APPS_DIR=C:/Code/altinn/all-apps
