--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "html-react-parser": "3.0.16",
     "jsonpointer": "5.0.1",
     "marked": "5.0.2",
+    "marked-mangle": "^1.0.1",
     "moment": "2.29.4",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "18.2.0",
