--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/dompurify": "3.0.2",
     "@types/dot-object": "2.1.2",
     "@types/jest": "29.5.1",
+    "@types/json-schema": "^7.0.11",
     "@types/marked": "4.3.0",
     "@types/mime": "3.0.1",
     "@types/react": "18.2.6",
@@ -144,6 +145,7 @@
     "dot-object": "2.1.4",
     "eslint-plugin-preferred-import-path": "^1.1.0",
     "html-react-parser": "3.0.16",
+    "json-schema-library": "^7.4.7",
     "jsonpointer": "5.0.1",
     "marked": "5.0.2",
     "marked-mangle": "^1.0.1",
