Adding components.ts to ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -392,3 +392,6 @@ src/Altinn.Apps/AppTemplates/AspNet/App/Properties/launchSettings.json
 # Cypress environment settings
 /cypress.env.json
 /.env
+
+# Auto-generated files (run 'yarn gen')
+/src/layout/components.ts
