Fixing my mistakes in the package.json file

--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
   "scripts": {
     "postinstall": "husky install",
     "gen": "node src/layout/components.gen.mjs",
-    "start": "gen && cross-env NODE_ENV=development webpack-dev-server --config webpack.config.development.js --mode development --progress",
-    "start:silent": "gen && cross-env NOTIFY_ON_ERRORS=false yarn start",
-    "build": "gen && cross-env NODE_ENV=production webpack --config webpack.config.production.js --progress",
-    "docker": "gen && cross-env NODE_ENV=development webpack --config webpack.config.development.js --progress && http-server dist -p 8080 --cors",
-    "test": "gen && jest",
-    "test:watch": "gen && jest --watch",
-    "test:watchall": "gen && jest --watchAll",
-    "tsc": "gen && tsc && tsc --project test/tsconfig.json",
-    "tsc:watch": "gen && tsc --watch",
-    "tsc:watch:cypress": "gen && tsc --watch --project test/tsconfig.json",
-    "lint": "gen && eslint .",
+    "start": "yarn gen && cross-env NODE_ENV=development webpack-dev-server --config webpack.config.development.js --mode development --progress",
+    "start:silent": "yarn gen && cross-env NOTIFY_ON_ERRORS=false yarn start",
+    "build": "yarn gen && cross-env NODE_ENV=production webpack --config webpack.config.production.js --progress",
+    "docker": "yarn gen && cross-env NODE_ENV=development webpack --config webpack.config.development.js --progress && http-server dist -p 8080 --cors",
+    "test": "yarn gen && jest",
+    "test:watch": "yarn gen && jest --watch",
+    "test:watchall": "yarn gen && jest --watchAll",
+    "tsc": "yarn gen && tsc && tsc --project test/tsconfig.json",
+    "tsc:watch": "yarn gen && tsc --watch",
+    "tsc:watch:cypress": "yarn gen && tsc --watch --project test/tsconfig.json",
+    "lint": "yarn gen && eslint .",
     "clean": "rimraf dist",
-    "webpack-watch": "gen && cross-env NODE_ENV=development webpack --mode=development --config webpack.config.development.js --watch --progress",
+    "webpack-watch": "yarn gen && cross-env NODE_ENV=development webpack --mode=development --config webpack.config.development.js --watch --progress",
     "cy:open": "cypress open",
     "cy:verify": "cypress verify",
     "cy:version": "cypress -v",
