--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "terser-webpack-plugin": "5.3.9",
     "ts-jest": "29.1.0",
     "ts-loader": "9.4.3",
+    "use-immer": "^0.9.0",
     "utility-types": "3.10.0",
     "webpack": "5.84.1",
     "webpack-cli": "5.1.1",
