--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@babel/preset-react": "7.22.3",
     "@babel/runtime": "^7.21.0",
     "@babel/runtime-corejs3": "^7.21.0",
+    "@percy/cli": "^1.25.0",
+    "@percy/cypress": "^3.1.2",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
     "@tanstack/react-query-devtools": "^4.29.3",
     "@testing-library/cypress": "9.0.0",
