--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@babel/preset-react": "7.22.3",
     "@babel/runtime": "^7.21.0",
     "@babel/runtime-corejs3": "^7.21.0",
-    "@percy/cli": "^1.25.0",
+    "@percy/cli": "^1.26.0",
     "@percy/cypress": "^3.1.2",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
     "@tanstack/react-query-devtools": "^4.29.3",
@@ -230,5 +230,18 @@
       "not op_mini all",
       "ie 11"
     ]
+  },
+  "percy": {
+    "version": 2,
+    "discovery": {
+      "allowed-hostnames": [
+        "localhost",
+        "localhost:8080",
+        "altinncdn.no"
+      ],
+      "launch-options": {
+        "timeout": 30000
+      }
+    }
   }
 }
