Hopefully, maybe executing an existing chrome browser on github actions instead of the one Percy downloads every time

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -68,6 +68,7 @@ jobs:
           export CYPRESS_RECORD_KEY=${{ secrets.CYPRESS_RECORD_KEY }}\n
           export GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}\n
           export PERCY_TOKEN=${{ secrets.PERCY_TOKEN }}\n
+          ls -l /usr/bin | grep chrome\n
           bash -c 'cd dist/; npx http-server -p 8080 --cors >/dev/null &'\n
           bash -c 'npx percy exec -- yarn run cy:test:all:headless
             --env environment=tt02
