Making the Cypress runner more configurable, adding back video support (must be enabled in .env), increasing the default headless window size, adding comments

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "yarn gen && cross-env NODE_ENV=development webpack-dev-server --config webpack.config.development.js --mode development --progress",
     "start:silent": "yarn gen && cross-env NOTIFY_ON_ERRORS=false yarn start",
     "build": "yarn gen && cross-env NODE_ENV=production webpack --config webpack.config.production.js --progress",
-    "docker": "yarn gen && cross-env NODE_ENV=development webpack --config webpack.config.development.js --progress && http-server dist -p 8080 --cors",
+    "docker": "yarn gen && cross-env NODE_ENV=development webpack --config webpack.config.development.js --progress && yarn serve 8080",
+    "serve": "http-server dist --cors -p",
     "test": "yarn gen && jest",
     "test:watch": "yarn gen && jest --watch",
     "test:watchall": "yarn gen && jest --watchAll",
