--- a/template.env
+++ b/template.env
@@ -12,6 +12,9 @@ ALTINN_ALL_APPS_DIR=C:/Code/altinn/all-apps
 ## Enable this to record videos of Cypress failures
 CYPRESS_RECORD_VIDEO=false
 
+## Set this to false to disable compression (speeds up test duration, but will increase disk usage)
+CYPRESS_VIDEO_COMPRESSION=32
+
 ## You can also override the host used by Cypress to load css/js files. This defaults to localhost:8080,
 ## and can also be configured explicitly when calling Cypress by using the --env host=<host> flag.
 ## See start-app-instance.ts for more details.
